--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@ body {
 h2 {
   font-size: 10rem;
   margin: 0;
-  color: #a21122;
-  text-shadow: 0 0 10px #d70427;
+  color: #11a222;
+  text-shadow: 0 0 10px #04d727;
 }
 
 h1 {
